--- a/style.css
+++ b/style.css
@@ -1,118 +1,119 @@
 html {
   box-sizing: border-box;
-  font-family: 'Karla';
-  font-size: 16px;
+  font-family: "Karla", sans-serif;
   font-weight: 400;
+  font-size: 16px;
 }
 
-body {
-  padding: 20px;
+*,*:before,*:after{
+  box-sizing: inherit;
+}
+body{
+  padding : 20px;
 }
 
-h2, h4, p {
+h2,h4,p{
   margin: 0;
 }
 
-*, *:before, *:after {
-  box-sizing: inherit;
-}
-
 #card {
-  box-shadow: 2px 3px 7px 0px rgba(0,0,0,0.35);
-  border-radius: 5px;
-  overflow: hidden;
-  width: 600px;
+  width : 600px;
   height: 400px;
+  box-shadow: -2px 2px 13px 0px rgba(0,0,0,0.22);
+  border-radius: 7px;
+  overflow: hidden;
+
 }
 
-#top-section {
-  width: 100%;
+#top-section{
+  width : 100%;
   height: 45%;
   padding: 25px;
 }
 
 #bottom-section {
-  width: 100%;
+  width : 100%;
   height: 55%;
-  color: white;
+  color : white;
+  
 }
 
-#bottom-left-section {
+#bottom-left {
+  width : 50% ;
   display: inline-block;
-  width: 50%;
-  height: 100%;
-  vertical-align: top;
-  background-color: #2ab2af;
+  height : 100%;
+  vertical-align : top;
+  background-color: #2ab2b0;
   padding: 25px;
 }
 
-#bottom-right-section {
+#bottom-right {
   display: inline-block;
-  width: 50%;
-  height: 100%;
+  width : 50% ;
+  height : 100%;
+  vertical-align : top;
   background-color: #2EBFBD;
-  vertical-align: top;
   padding: 25px;
 }
 
-#top-section h2 {
-  color: #2ab2af;
-  margin-bottom: 20px;
-}
-
-#top-section h4 {
-  color: #c0df34;
+#top-section h2{
+  color : #2ab2b0;
   margin-bottom: 10px;
 }
 
-#top-section p {
-  color: #98a6bd;
+#top-section h4{
+  color : #c0df34;
+   margin-bottom: 10px;
 }
 
-button {
-  color: white;
-  background-color: #c0df34;
-  border: none;
+
+#top-section p{
+  color : #98a6bd;
+}
+
+button{
+  color : white;
+  background-color : #c0df34;
+  border : none;
+  border-radius : 5px;
   padding: 10px;
-  width: 100%;
-  border-radius: 5px;
+  width : 100%;
+  
 }
 
-button:hover {
-  cursor: pointer;
-  background-color: #A9C42D;
-  transform: scale(1.02);
+button:hover{
+  cursor : pointer;
 }
 
-#price {
-  font-weight: 700;
-  font-size: 1.4rem;
+
+#price{
+  font-weight : 700;
+  font-size : 1.5rem;
+}
+#price-frequency, #price{
+    display : inline-block
 }
 
-#bottom-left-section h4 {
+#price-frequency{
+  position : relative;
+  top : -3px;
+  opacity : 0.7px;
+  margin-left : 0.7;
+  font-size : 0.8rem;
+  
+}
+
+#bottom-left h4{
   margin-bottom: 25px;
 }
 
-#bottom-left-section p {
+
+#bottom-left p{
   font-size: 0.8rem;
-  margin-bottom: 40px;
+    margin-bottom: 40px;
 }
 
-#price-frequency, #price {
-  display: inline-block;
-}
 
-#price-frequency {
-  position: relative;
-  top: -3px;
-  font-size: 0.8rem;
-  opacity: 0.7;
-  margin-left: 5px;
-}
-
-#price-container {
-  margin-bottom: 10px;
-}
 
 ul {
   padding: 0;
